# TESTAR_ltl

./: CMakeLists.txt  CMakeListsCross.txt  JSONwritertest.cpp  README.md  spot_checker.cpp  spot_formula_to_dot.cpp  spot_ltlf.cpp  spotparse.cpp
doxygen/: Testar_LTL_Doxyfile  spot_formula_to_dot.md  spot_formula_to_dot.txt
excutable/: spot_checker  spot_formula_to_dot
tests/: f-responds-to.txt  f-weakuntil.txt  formalas-abc-almost-dead.txt  formula_to_dot.txt  formulas-ab-100.txt  formulas-ab-1000.txt  formulas-ab-3.txt  formulas-abc-100.txt  formulas-abc-1000.txt  formulas-abcd-1000.txt  formulas-abh-3.txt  formulas-bc-3.txt  formulas-p0-p1.txt  test_1loopautomaton.txt  test_1loopautomaton_extrap1.txt  test_automaton.txt  test_automaton2.txt  test_automaton3.txt  test_automaton4.txt  test_automaton4a.txt  test_automaton4b.txt  test_automaton4dead.txt  test_automaton4dead_noliveness.txt  test_automaton5.txt  test_automaton6.txt  test_automatonerror.txt  test_formula.txt  test_noloopautomaton.txt
